--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,21 +34,23 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.core:core-ktx:1.15.0'
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.google.android.material:material:1.12.0'
 
     // Para manejar archivos SQLite
-    implementation 'androidx.sqlite:sqlite:2.1.0'
+    implementation 'androidx.sqlite:sqlite-ktx:2.4.0'
 
     // Para manejar JSON
-    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'com.google.code.gson:gson:2.10.1'
 
     // Para encriptación (usaremos AES)
     implementation 'org.bouncycastle:bcprov-jdk15to18:1.70' // BouncyCastle para encriptación
 
     // Para conexión MQTT
     implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
+
+
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
