--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 
 android {
     namespace 'com.example.healthsync'
-    compileSdk 34
+    compileSdk 35  // Cambia a API 35
 
     defaultConfig {
         applicationId "com.example.healthsync"
         minSdk 24
-        targetSdk 33
+        targetSdk 35  // Cambia a API 35
         versionCode 1
         versionName "1.0"
 
@@ -33,24 +33,22 @@ android {
 }
 
 dependencies {
-
-    implementation 'androidx.core:core-ktx:1.15.0'
+    implementation 'androidx.core:core-ktx:1.15.0'  // Versión actual que requiere API 35
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.google.android.material:material:1.12.0'
 
-    // Para manejar archivos SQLite
+    // SQLite handling
     implementation 'androidx.sqlite:sqlite-ktx:2.4.0'
 
-    // Para manejar JSON
+    // JSON handling
     implementation 'com.google.code.gson:gson:2.10.1'
 
-    // Para encriptación (usaremos AES)
-    implementation 'org.bouncycastle:bcprov-jdk15to18:1.70' // BouncyCastle para encriptación
+    // Encryption (using AES)
+    implementation 'org.bouncycastle:bcprov-jdk15to18:1.70'
 
-    // Para conexión MQTT
+    // MQTT connection
     implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
-
-
+    implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
