--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
     defaultConfig {
         applicationId "com.example.healthsync"
         minSdk 24
+        //noinspection EditedTargetSdkVersion
         targetSdk 35  // Cambia a API 35
         versionCode 1
         versionName "1.0"
