--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,6 @@ android {
     defaultConfig {
         applicationId "com.example.healthsync"
         minSdk 24
-        //noinspection EditedTargetSdkVersion
         targetSdk 35  // Cambia a API 35
         versionCode 1
         versionName "1.0"
@@ -31,9 +30,23 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+// Bloque de packaging para excluir archivos duplicados
+    packaging {
+        resources {
+            excludes += [
+                    'META-INF/INDEX.LIST',
+                    'META-INF/*.SF',
+                    'META-INF/*.DSA',
+                    'META-INF/*.RSA',
+                    'META-INF/io.netty.versions.properties'  // Excluir archivo relacionado con Netty
+            ]
+        }
+    }
 }
 
 dependencies {
+    // Android Core libraries
     implementation 'androidx.core:core-ktx:1.15.0'  // Versión actual que requiere API 35
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.google.android.material:material:1.12.0'
@@ -47,14 +60,15 @@ dependencies {
     // Encryption (using AES)
     implementation 'org.bouncycastle:bcprov-jdk15to18:1.70'
 
-    // MQTT connection
-    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
-    implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
+    // HiveMQ MQTT Client library
+    implementation 'com.hivemq:hivemq-mqtt-client:1.3.3'
 
+    // Testing libraries
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
 
-    implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
-
+    // Local BroadcastManager (optional)
+    //implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
 }
+
