--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,7 +61,13 @@ dependencies {
     implementation 'org.bouncycastle:bcprov-jdk15to18:1.70'
 
     // HiveMQ MQTT Client library
-    implementation 'com.hivemq:hivemq-mqtt-client:1.3.3'
+    implementation 'com.hivemq:hivemq-mqtt-client:1.3.4' //1.3.3
+
+    // Paho MQTT Client library
+    implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
+    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
+
+
 
     // Testing libraries
     testImplementation 'junit:junit:4.13.2'
