--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,6 @@
 
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -26,6 +25,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HealthSync"
         tools:targetApi="31">
+
         <!-- Define la actividad principal con android:exported="true" -->
         <activity
             android:name=".MainActivity"
@@ -35,6 +35,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Servicio necesario para la librería MQTT -->
+        <service
+            android:name="org.eclipse.paho.android.service.MqttService"
+            android:enabled="true"
+            android:exported="true" />
 
     </application>
 
